--- a/3.00-starting-project/src/main/resources/application.properties
+++ b/3.00-starting-project/src/main/resources/application.properties
@@ -2,17 +2,12 @@ info.school.name=luv2code
 info.app.name=My Super Cool Gradebook
 info.app.description=a fun way to track student grades!
 info.app.version=1.0.0
-
 ## Server Properties
-server.port= 1500
+server.port=1500
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_mvc_testing?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 
-## H2 Test Database creds
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.datasource.initialization-mode=always
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.h2.console.enabled=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql = true
+
