--- a/4.00-starting-project/src/main/resources/application.properties
+++ b/4.00-starting-project/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port= 1500
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/mysqltutorial?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url = jdbc:mysql://localhost:3306/spring_rest_testing?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username = root
 spring.datasource.password = password
 spring.datasource.initialization-mode=always
